# io-smtp

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  flake.nix  shell.nix
.github/workflows/: tests.yml
examples/: greeting.rs  login.rs  starttls.rs
src/: context.rs  lib.rs  login.rs  read.rs  send-bytes.rs  send-message.rs  send.rs  utils.rs  write.rs
src/coroutines/: authenticate-login-with-capability.rs  authenticate-login.rs  authenticate-plain-with-capability.rs  authenticate-plain.rs  authenticate.rs  data.rs  ehlo.rs  greeting-with-capability.rs  greeting.rs  mail.rs  mod.rs  noop.rs  quit.rs  rcpt.rs  rset.rs  send-message.rs  send.rs  starttls.rs
src/rfc1870/: mod.rs  size.rs
src/rfc3207/: capability.rs  mod.rs  starttls.rs
src/rfc3461/: capability.rs  mod.rs  parameter.rs
src/rfc3463/: capability.rs  enhanced_status_code.rs  mod.rs
src/rfc4616/: mod.rs  plain.rs
src/rfc4954/: auth.rs  auth_data.rs  authenticate.rs  authenticate_data.rs  capability.rs  login.rs  mod.rs  plain.rs
src/rfc4954/types/: auth_mechanism.rs  authenticate_data.rs  mod.rs
src/rfc5321/: data.rs  ehlo.rs  greeting.rs  helo.rs  mail.rs  mod.rs  noop.rs  quit.rs  rcpt.rs  rset.rs
src/rfc5321/types/: address_literal.rs  atom.rs  command.rs  domain.rs  ehlo_domain.rs  ehlo_response.rs  enhanced_status_code.rs  forward_path.rs  greeting.rs  local_part.rs  mailbox.rs  mod.rs  parameter.rs  reply_code.rs  response.rs  reverse_path.rs  text.rs  vec1.rs
src/rfc7628/: mod.rs  oauthbearer.rs
src/rfc7677/: mod.rs  scram_sha256.rs
tests/: common.rs  fastmail.rs  gmail.rs  parsers.rs  rfc5321.rs  stalwart.rs  stalwart.sh  stub.rs
