[package]
name = "io-smtp"
description = "Set of I/O-free Rust coroutines to manage SMTP streams"
version = "0.0.1"
authors = ["Clément DOUIN <pimalaya.org@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["email"]
keywords = ["email", "smtp", "client"]
homepage = "https://pimalaya.org"
documentation = "https://github.com/pimalaya/io-smtp"
repository = "https://github.com/pimalaya/io-smtp"

[features]
default = ["scram"]
scram = ["dep:hmac", "dep:pbkdf2", "dep:rand", "dep:sha2"]

[dev-dependencies]
env_logger = "0.11"
io-stream = { version = "0.0.2", default-features = false, features = ["std"] }
rustls = "0.23"
rustls-platform-verifier = "0.6"

[dependencies]
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
bounded-static = { version = "0.8", default-features = false, features = ["alloc"] }
bounded-static-derive = { version = "0.8", default-features = false }
chumsky = { version = "1.0.0-alpha.7", default-features = false, features = ["std"] }
hmac = { version = "0.13", optional = true }
io-stream = { version = "0.0.2", default-features = false }
log = "0.4"
pbkdf2 = { version = "0.12", optional = true }
rand = { version = "0.10", optional = true }
secrecy = "0.10"
sha2 = { version = "0.11", optional = true }
thiserror = "2"
